results/SVCOMP/specgen/log-NullPointerException2-2024_02_28_17_23_09.txt
class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
                                                              ^
  symbol:   variable a
  location: class NullPointerException2
1 error

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
                                                              ^
  symbol:   variable a
  location: class NullPointerException2
1 error

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
                                                              ^
  symbol:   variable a
  location: class NullPointerException2
1 error

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> (\exists NullPointerException exc; a == null);
                                                              ^
  symbol:   variable a
  location: class NullPointerException2
1 error

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> (\exists NullPointerException exc; true);
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
